@@ -1,0 +1,113 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Aeotec ZW140 Dual Nano Switch, base on Engineering Spec 01/10/2016
+Product Type ID: EU=0x00, US=0x01, AU=0x02 CN=0x1D 
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+	<!-- Configuration Parameters -->
+	<CommandClass id="112">
+		<Value type="list" index="4" genre="config" label="Over heat protection" units="" min="0" max="1" size="1" value="0">
+			<Help>Output load will be closed after 30 seconds if the temperature inside the product exceeds 100C.</Help>
+			<Item label="Disable" value="0"/>
+			<Item label="Enable" value="1"/>
+		</Value>
+		<Value type="list" index="20" genre="config" label="Status re-power on" size="1" value="0">
+			<Help>Configure the output load status after re-power on</Help>
+			<Item label="The last status before the power outage" value="0"/>
+			<Item label="Always on" value="1"/>
+			<Item label="Always off" value="2"/>
+		</Value>
+		<Value type="list" index="80" genre="config" label="Notification report association group 1" units="" size="1" value="3">
+			<Help>To set which notification would be sent to the associated nodes in association group 1 when the state of output load is changed</Help>
+			<Item label="None" value="0"/>
+			<Item label="Hail" value="1"/>
+			<Item label="Basic" value="2"/>
+			<Item label="Hail CC when using the external switch to switch the loads" value="3"/>
+		</Value>
+		<Value type="list" index="81" genre="config" label="Notification report using the external switch 1" units="" size="1" value="1">
+			<Help>To set which notification would be sent to the associated nodes in association group 3 when using the external switch 1 to switch the loads</Help>
+			<Item label="None" value="0"/>
+			<Item label="Basic" value="1"/>
+		</Value>
+		<Value type="list" index="82" genre="config" label="Notification report using the external switch 2" units="" size="1" value="1">
+			<Help>To set which notification would be sent to the associated nodes in association group 4 when using the external switch 2 to switch the loads</Help>
+			<Item label="None" value="0"/>
+			<Item label="Basic" value="1"/>
+		</Value>
+		<Value type="list" index="83" genre="config" label="LED status" units="" size="1" value="0">
+			<Help>Configure the state of LED when it is in 3 modes below</Help>
+			<Item label="Normal mode" value="0"/>
+			<Item label="Momentary indicate mode" value="1"/>
+			<Item label="Night light mode" value="2"/>
+		</Value>
+		<Value type="int" index="84" genre="config" label="Time set for Night light mode" value="301991936">
+			<Help>
+				Value1: Hour of ON.
+				Value2: Minute of ON.
+				Value3: Hour of OFF.
+				Value4: Minute of OFF.
+				E.g. The default setting is the Night light mode is enabled at 12: 00 and disabled at 8:00 0x12000800.
+			</Help>
+		</Value>
+		<Value type="int" index="86" genre="config" label="Set the ON time of output load" value="8327680">
+			<Help>
+				Value1: 0= Disable / 1= Enable.
+				Value2: Weekday (Bit 0-6 means Monday to Sunday).
+				Value3: Hour of turning OFF.
+				Value4: Minute of turning OFF
+				E.g. The default setting 0x007F1200
+			</Help>
+		</Value>
+		<Value type="int" index="87" genre="config" label="Set the OFF time of output load" value="8328960">
+			<Help>
+				Value1: 0= Disable / 1= Enable.
+				Value2: Weekday (Bit 0-6 means Monday to Sunday).
+				Value3: Hour of turning OFF.
+				Value4: Minute of turning OFF
+				E.g. The default setting 0x001707F00
+			</Help>
+		</Value>
+		<Value type="list" index="120" genre="config" label="Set the external S1 mode" units="" min="0" max="3" size="1" value="0">
+			<Help>When the switch mode of S1 is determined or identified or configured, this mode value will not be reset after exclusion</Help>
+			<Item label="Unknown switch mode" value="0"/>
+			<Item label="2-state switch" value="1"/>
+			<Item label="3-way switch" value="2"/>
+			<Item label="Momentary button" value="3"/>
+			<Item label="Automatic identification mode" value="4"/>
+		</Value>
+		<Value type="list" index="121" genre="config" label="Set the external S2 mode" units="" min="0" max="3" size="1" value="0">
+			<Help>When the switch mode of S2 is determined or identified or configured, this mode value will not be reset after exclusion</Help>
+			<Item label="Unknown switch mode" value="0"/>
+			<Item label="2-state switch" value="1"/>
+			<Item label="3-way switch" value="2"/>
+			<Item label="Momentary button" value="3"/>
+			<Item label="Automatic identification mode" value="4"/>
+		</Value>
+		<Value type="list" index="122" genre="config" label="Set the control destination of the external switch" units="" min="0" max="3" size="1" value="3">
+			<Help></Help>
+			<Item label="Control itself" value="1"/>
+			<Item label="Control other nodes in the same network" value="2"/>
+			<Item label="Control itself and other nodes in the same network" value="3"/>
+		</Value>
+		<Value type="list" index="252" genre="config" label="Configuration Locked" units="" min="0" max="1" size="1" value="0">
+			<Help>Enable/disable Configuration Locked</Help>
+			<Item label="Disable" value="0"/>
+			<Item label="Enable" value="1"/>
+		</Value>
+		<Value type="list" index="255" genre="config" label="Reset To Factory Defaults" size="4" value="1" write_only="true">
+			<Help>Reset to factory defaults</Help>
+			<Item label="Reset to factory default setting" value="0"/>
+			<Item label="Normal" value="1"/>
+			<Item label="Reset to factory default setting and removed from the z-wave network" value="1431655765"/>
+		</Value>
+	</CommandClass>
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="4">
+			<Group index="1" max_associations="5" label="Lifeline"/>
+			<Group index="2" max_associations="5" label="Retransmit"/>
+			<Group index="3" max_associations="5" label="Control Key1"/>
+			<Group index="4" max_associations="5" label="Control Key2"/>
+		</Associations>
+	</CommandClass>
+</Product>
