@@ -153,6 +153,18 @@
 		<Product type="0102" id="0082" name="ZW130 WallMote Quad" config="aeotec/zw130.xml"/>
 		<Product type="0202" id="0082" name="ZW130 WallMote Quad" config="aeotec/zw130.xml"/>
 		<Product type="1D02" id="0082" name="ZW130 WallMote Quad" config="aeotec/zw130.xml"/>
+		<Product type="0003" id="0084" name="ZW132 Dual Nano Switch" config="aeotec/zw132.xml"/>
+		<Product type="0103" id="0084" name="ZW132 Dual Nano Switch" config="aeotec/zw132.xml"/>
+		<Product type="0203" id="0084" name="ZW132 Dual Nano Switch" config="aeotec/zw132.xml"/>
+		<Product type="1d03" id="0084" name="ZW132 Dual Nano Switch" config="aeotec/zw132.xml"/>
+		<Product type="0003" id="008b" name="ZW139 Nano Switch" config="aeotec/zw139.xml"/>
+		<Product type="0103" id="008b" name="ZW139 Nano Switch" config="aeotec/zw139.xml"/>
+		<Product type="0203" id="008b" name="ZW139 Nano Switch" config="aeotec/zw139.xml"/>
+		<Product type="1d03" id="008b" name="ZW139 Nano Switch" config="aeotec/zw139.xml"/>
+		<Product type="0003" id="008c" name="ZW140 Dual Nano Switch" config="aeotec/zw140.xml"/>
+		<Product type="0103" id="008c" name="ZW140 Dual Nano Switch" config="aeotec/zw140.xml"/>
+		<Product type="0203" id="008c" name="ZW140 Dual Nano Switch" config="aeotec/zw140.xml"/>
+		<Product type="1d03" id="008c" name="ZW140 Dual Nano Switch" config="aeotec/zw140.xml"/>
 	</Manufacturer>
     <Manufacturer id="0111" name="Airline Mechanical">
         <Product type="8200" id="0200" name="ZDS-100"/>
