@@ -78,6 +78,9 @@ DISTFILES =	.gitignore \
 	config/aeotec/zw121.xml \
 	config/aeotec/zw129.xml \
 	config/aeotec/zw130.xml \
+	config/aeotec/zw132.xml \
+	config/aeotec/zw139.xml \
+	config/aeotec/zw140.xml \
 	config/assa_abloy/KeyfreeConnected.xml \
 	config/assa_abloy/nexTouch.xml \
 	config/assa_abloy/PushButtonDeadbolt.xml \
